--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "gsap": "^3.12.5",
+    "locomotive-scroll": "^4.1.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
