--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "locomotive-scroll": "^4.1.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-custom-cursor": "^0.1.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0"
   },
